<resources>
    <string name="app_name">FireFighterApp</string>

    <!-- Clé pour utiliser l'API Google Map -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyCGwXaXjlhXfKurhkPXpsTApGf3kfjhcWI </string>

    <!--Titres activities-->
    <string name="title_activity_map">Map</string>
    <string name="title_intervention_details">Detail intervention</string>
    <string name="title_activity_list_intervention">Interventions</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_intervenant">Connexion en tant qu\'intervenant</string>
    <string name="action_sign_in_codis">Connexion en tant que CODIS</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--String related to intervention details-->
    <string name="intervention_detail_fragment_static_status">Status :</string>
    <string name="intervention_detail_fragment_static_adresse">Adresse :</string>
    <string name="intervention_detail_fragment_static_ville">Ville :</string>
    <string name="intervention_detail_fragment_static_code_sinistre">Code Sinistre :</string>
    <string name="intervention_detail_fragment_static_heure_creation">Heure de création :</string>
    <string name="intervention_detail_fragment_static_heure_fin">Heure de fin :</string>
    <string name="intervention_detail_fragment_static_createur">Crée par :</string>
    <string name="intervention_detail_fragment_static_button_map">Ouvrir la carte</string>
    <string name="intervention_detail_fragment_static_status_encours">En cours</string>
    <string name="intervention_detail_fragment_static_button_fini">Fini</string>
    <string name="intervention_detail_fragment_moyens_status_demande">demandé</string>


    <!--String a trier-->
    <string name="img_item_intervention">carte de l\'intervention</string>

    <!--Menu bouton flottant-->
    <string name="map_activity_fab_menu_label">Replier</string>
    <string name="map_activity_fab_menu_removePointToVisit_label">Supprimer un élément</string>
    <string name="map_activity_fab_menu_addPointToVisit_label">Tracer un trajet</string>
    <string name="map_activity_fab_menu_zone_polygon_label">Tracer une zone</string>
    <string name="map_activity_fab_menu_trajet_open_close">Ouvrir/fermer un trajet</string>
    <string name="map_activity_fab_menu_trajet_open">Ouvrir le trajet</string>
    <string name="map_activity_fab_menu_trajet_close">Fermer le trajet</string>
    <string name="map_activity_fab_menu_photo_label">Définir un point de prise de photo</string>

    <string-array name="vehicule">
        <item> vehicule1</item>
        <item>vehicule2</item>
        <item>vehicule3</item>
    </string-array>

    <!-- Formulaire d'ajout d'intervention-->
    <string name="title_activity_add_intervention">Nouvelle intervention</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_place_api_key">AIzaSyAHBaS8v5L4ANEv9vztfqXSivkNws8TZjw</string>
    <string name="new_map_activity_fab_menu_deploiement_label">Déploiement</string>
    <string name="new_map_activity_fab_menu_sinistre_label">Sinistre</string>
    <string name="new_map_activity_fab_menu_trait_topo_label">Trait topographique</string>
    <string name="fragment_holder_hide_button_alt">Masquer</string>
    <string name="title_activity_new_list_intervention">NewListIntervention</string>
    <string name="add_intervention_validation_button">CREER L\'INTERVENTION</string>
    <string name="nom_de_l_intervention">Nom de l\'intervention</string>
    <string name="code_sinistre">Code Sinistre</string>
    <string name="localisation">Localisation</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="rue">Rue</string>
    <string name="numero">Numéro</string>
    <string name="coordonnee_gps">Coordonnée GPS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="code_sinistre_dot">Code sinistre :</string>
</resources>
