<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentFormulaire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:imeOptions="flagNoExtractUi"
    tools:context="istic.m2.ila.firefighterapp.addintervention.FragmentFormulaire">
    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e5e5"
                android:gravity="start"
                android:text="@string/nom_de_l_intervention"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nom_de_l_intervention"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/nom_de_l_intervention"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/codeSinistreBloc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e5e5"
                android:gravity="start"
                android:text="@string/code_sinistre"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCodeSinistre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/code_sinistre_dot"
                android:textSize="16sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/searchCodeSinistre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/code_sinistre"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textAutoComplete"
                android:maxLines="1" />

            <TextView
                android:id="@+id/Localisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e5e5"
                android:gravity="start"
                android:text="@string/localisation"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textVille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ville"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_ville"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/ville"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/textcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/code_postal"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/code_postal"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLines="1" />

            <TextView
                android:id="@+id/textRue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rue"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editText_rue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/rue"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLines="1" />


            <TextView
                android:id="@+id/textNRue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/numero"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_nrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/numero"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/textCoordonnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/coordonnee_gps"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/latitude"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/editText_lng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/longitude"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="numberSigned|numberDecimal"
                    android:maxLines="1" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
